# ctrl-mac-simulator

./: .dockerignore  .gitignore  Dockerfile  README.md  manual.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: app.py  config.py  global_logger_memory_handler.py  main.py  main_flask.py
backend/src/ctrl_mac_simulator/: global_logger_memory_handler.py  main.py  main_flask.py
backend/src/ctrl_mac_simulator/simulation/devices/: sensor.py
backend/src/ctrl_mac_simulator/simulation/messages/: abstract_message.py  request_reply_message.py  sensor_measurement_message.py  transmission_request_message.py
backend/src/ctrl_mac_simulator/visual/components/: left_sidebar.py
backend/src/simulation/: stat_tracker.py
backend/src/simulation/devices/: gateway.py  sensor.py
backend/src/simulation/messages/: __init__.py  request_reply_message.py  sensor_measurement_message.py  transmission_request_message.py
backend/src/visual/: manim_main_scene.py
backend/tests/: test_airtime.py  test_cmd_integration.py  test_global_logger_memory_handler.py  test_integration.py  test_message_json_serialization.py  test_rrm_message.py  test_server_integration.py  test_setup_simulation.py
dissertation/: ethics_checklist.doc  ethics_checklist_signed.doc  exploratory_interview.md  meeting_minutes.md  requirements_gathering_interview.md  status_report.md  status_report_template.md
dissertation/requirements_gathering_interview/: llm_prompt
dissertation/transcript_generator/: pyproject.toml  transcribe.py
frontend/: .firebaserc  about.html  firebase.json  index.html  main.js  package-lock.json  package.json  playwright.config.cjs  style.css  vite.config.js
frontend/src/: grid-allocator.js  log-highlighter.js  plotter.js  scene.js  tween-pacer.js  tween-time-traveler.js  visual-gateway.js  visual-sensor-helper.js  visual-sensors-grid.js  visual-sensors.js  visual-simulation.js
frontend/tests/: grid-allocator.test.js  log-highlighter.test.js  log-matcher-helper.test.js  play-pause-controller.test.js  (+1 more)
tests/: test_airtime.py  test_collision_detection.py  test_global_logger_memory_handler.py  test_integration.py  test_message_json_serialization.py  test_rrm_message.py
(+80 files in other folders)
