[project]
name = "ctrl-mac-simulator"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "EdoardoLuciani", email = "edoardo.luciani@gmail.com" }]
dependencies = [
    "simpy>=4.1.1",
    "pytest>=8.3.3",
    "manim>=0.18.1",
    "plotly>=5.24.1",
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ctrl_mac_simulator"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-p no:logging"
