[project]
name = "ctrl-mac-simulator"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "EdoardoLuciani", email = "edoardo.luciani@gmail.com" }]
dependencies = ["simpy>=4.1.1", "flask>=3.0.3", "numpy>=2.1.3"]
requires-python = ">= 3.11"

[dependency-groups]
dev = ["pytest>=8.3.3", "coverage>=7.6.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-p no:logging"
pythonpath = ["src"]
